# skinchanger

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
data/: nullifiedcat.json
include/: hardcoded.hpp
